--- a/manifest.json
+++ b/manifest.json
@@ -13,5 +13,9 @@
    [
      "tabs",
      "activeTab"
-   ]
+   ],
+  "background": {
+    "scripts": ["eventPage.js"],
+    "persistent": false
+  }
 }
