--- a/manifest.json
+++ b/manifest.json
@@ -1,19 +1,20 @@
 {
   "name": "Google ads finder",
   "version": "0.1",
-  "description": "Try to find Google ads by refreshing pages",
-  "devtools_page": "gadfinder.html",
+  "description": "A simple tool to find the specified search string in response headers by refreshing pages",
+  "devtools_page": "strfinder.html",
   "manifest_version": 2,
   "content_security_policy": "default-src 'self'  chrome-extension-resource: ; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-eval';  connect-src *; frame-src *;",
   "web_accessible_resources":
    [
      "*"
    ],
-  "permissions": 
+  "permissions":
    [
      "tabs",
      "activeTab"
    ],
+  "minimum_chrome_version": "18",
   "background": {
     "scripts": ["eventPage.js"],
     "persistent": false
