DBM ads detection is supposed to work now, but there are some glitches

--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,8 @@
   "permissions":
    [
      "tabs",
-     "activeTab"
+     "activeTab",
+     "https://*.google.com/"
    ],
   "minimum_chrome_version": "18",
   "background": {
