--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
-  "name": "strFinder",
-  "version": "0.2",
-  "description": "A simple tool to find the specified search string in response headers by refreshing pages",
-  "devtools_page": "strfinder.html",
+  "name": "adsFinder",
+  "version": "0.3",
+  "description": "A simple tool to surface sporadic Google ads by keeping refreshing pages",
+  "devtools_page": "adsFinder.html",
   "manifest_version": 2,
   "content_security_policy": "default-src 'self'  chrome-extension-resource: ; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-eval';  connect-src *; frame-src *;",
   "web_accessible_resources":
